<resources>
    <string name="app_name">BookingExam</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nights_title">noches</string>
    <string name="date_in_button_title">Fecha Entrada</string>
    <string name="date_out_button_title">Fecha Salida</string>
    <string name="session_start_title">Inicia Sesion</string>
    <string name="average_price_title">Desde</string>
    <string name="rate_title">Puntuación</string>
    <string name="category_title">Categoria:</string>
    <string name="stars_title">Estrellas</string>
    <string name="description_title">Descripcion</string>
    <string name="booked_title">Número Reservas:</string>
    <string name="euros_title">€</string>
    <string name="times_title">veces</string>
    <string name="password_title">Password</string>
    <string name="login_button">Entrar</string>
    <string name="not_registered_yet_title">¿Aun no estas registrado?</string>
    <string name="register_button">Registrate</string>
    <string name="custom_search_title">Busqueda Personalizada:</string>
    <string name="booking_exam_title">BOOKING.EXAM</string>
    <string name="people_title">Número Personas:</string>
    <string name="search_button">BUSCAR</string>
    <string name="register_title">REGISTRATE</string>
    <string name="register_name_title">Nombre</string>
    <string name="register_surename_title">Apellidos</string>
    <string name="email_title">Email</string>
    <string name="register_button_title">Registrar</string>
    <string name="finish_reservation_title">Finalizar Reserva</string>
    <string name="room_title">Nº Habitacion:</string>
    <string name="hotel_title">Hotel</string>
    <string name="location_title">Localidad</string>
    <string name="thanks_title">Gracias por su Reserva</string>
    <string name="points_title">Puntos</string>
    <string name="prize_title">€</string>
    <string name="capacity_title">Capacidad :</string>
    <string name="persons_title">personas</string>
    <string name="prize_literal_title">Precio :</string>
    <string name="push_here_for_booking_title">Seleccionar</string>
    <string name="check_title">SELECCIONAR</string>
    <string name="reservation_num_person_title">personas</string>
    <string name="reservation_total_prize_title">Total:</string>
    <string name="activity_list_hotels_data_error">Error al obtenr los datos</string>
    <string name="main_navigation_bottom_category">Categoría</string>
    <string name="main_navigation_bottom_precio_ascendente">Ascendente</string>
    <string name="main_navigation_bottom_precio_descendente">Descendente</string>
    <string name="main_navigation_bottom_favoritos">Favoritos</string>
    <string name="overflow_item_busqueda">Busqueda</string>
    <string name="overflow_item_todos_hoteles">Todos Hoteles</string>
    <string name="overflow_item_mas_reservados">10 mas reservados</string>
    <string name="final_message_completed_data">Pulse finalizar para reservar</string>
    <string name="final_message_incompleted_data">Complete los datos que faltan</string>
    <string name="menu_navigation_main_home">Principal</string>
    <string name="menu_navigation_main_bookings">Reservas</string>
    <string name="menu_navigation_main_login">Login</string>
    <string name="row_list_card_texto_anticipo">IVA incluido</string>
    <string name="row_cancelacion">Cancelación libre</string>
    <string name="row_efectivo_o_tarjeta">Efectivo o tarjeta</string>
    <string name="row_book_n_reservas">Nº Reservas:</string>
    <string name="activity_description_direccion_text">Calle Mayor, 8,</string>
    <string name="layoutError">Error al traer los datos del servidor</string>
    <string name="error_retry">Reintentar</string>
    <string name="activity_description_wifi_gratis">Wifi gratis</string>
    <string name="activity_description_bath">Baño privado</string>
    <string name="activity_description_vistas">Vistas</string>
    <string name="reservation_alojamiento_text">Alojamiento</string>
    <string name="reservation_vuelos_text">Vuelos</string>
    <string name="reservation_coches_text">Alquiler de coches</string>
    <string name="reservation_entrada_text">Entrada</string>
    <string name="reservation_salida_text">Salida</string>
    <string name="main_reservas_cabecera">¡Bienvenido!</string>
    <string name="main_reservas_aqui_texto">Aquí encontrarás tus viajes</string>
    <string name="main_reservas_parrafo">En esta página puedes ver todas las reservas que tienes. Si has hecho una reserva, pero no la ves aquí, puedes importarla usando el número de confirmación y el PIN</string>
    <string name="main_reservas_obutton_text">Viajes completados o cancelados</string>
    <string name="description_descuento_premium">Descuento PREMIUM</string>
</resources>