<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registro"
    android:weightSum="100"
    tools:context=".feature.register.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="65dp"
        android:layout_weight="10"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/colorWhite"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/etNombreReg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:hint="@string/register_name_title"
        android:textStyle="bold"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etApellidosReg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:hint="@string/register_surename_title"
        android:textStyle="bold"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etEmailReg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:hint="@string/email_title"
        android:textStyle="bold"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password_title"
        android:textStyle="bold"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:weightSum="10"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btRegistro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/button_border"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/register_button_title" />

    </LinearLayout>

</LinearLayout>