<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    tools:context=".feature.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="20"
        android:background="@color/colorBlue"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:text="@string/booking_exam_title"
        android:textColor="@color/colorWhite"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:weightSum="10"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sMenu"
                android:entries="@array/menu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5"
            app:srcCompat="@drawable/hotelportada"
            android:scaleType="fitXY"
            android:padding="3dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:textColor="@color/colorBlue"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/custom_search_title" />



    <Spinner
        android:id="@+id/sLocation"
        android:entries="@array/localidades"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:textColor="@color/colorBlue"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/bDateIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/button_border"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/date_in_button_title" />

        <Button
            android:id="@+id/bDateOut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/button_border"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/date_out_button_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/people_title" />

        <EditText
            android:id="@+id/tvNumPerson"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:text=""
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginBottom="25dp">

        <Button
            android:id="@+id/bBuscar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/button_border"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:text="@string/search_button" />

    </LinearLayout>



</LinearLayout>