<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".feature.main.BookingsFragment">

    <RelativeLayout
        android:id="@+id/rlMainReservasCabecera"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/logo_booking">

        <TextView
            android:id="@+id/tvMainReservasCabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/logo_booking"
            android:text="@string/main_reservas_cabecera"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tvIcMainReservasInterrogante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/tvMainReservasCabecera"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="80dp"
            app:drawableStartCompat="@drawable/ic_main_reservas_help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/tvIcMainReservasInterrogante"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            app:drawableStartCompat="@drawable/ic_main_reservas_cloud" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageViewMainReservas"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@id/rlMainReservasCabecera"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/reservas" />

    <TextView
        android:id="@+id/tvMainReservasAquiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewMainReservas"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/main_reservas_aqui_texto"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/tvMainReservasLargoText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMainReservasAquiText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/main_reservas_parrafo"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"/>

    <Button
        android:id="@+id/outlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMainReservasLargoText"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/main_reservas_obutton_text"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:icon="@drawable/ic_main_reservas_o_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>